tests/test_proof/bad/enums-overlap.catala_en
## Test

Overlap when defining x if A? y

```catala
declaration enumeration T:
   -- C content boolean
   -- D content integer

declaration enumeration S:
    -- A content integer
    -- B content T

declaration scope A:
  context x content integer
  context y content S

scope A:
  definition y equals B content (D content 1)
  definition x under condition match y with pattern -- A of a: true -- B of b: false consequence equals 0
  definition x under condition match y with pattern -- A of a: true -- B of b: true consequence equals 1
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "x" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/bad/enums-overlap.catala_en:15.11-15.12:
└──┐
15 │   context x content integer
   │           ‾
   └─ Test
[WARNING] The constructor "C" of enumeration "T" is never used; maybe it's unnecessary?

┌─⯈ tests/test_proof/bad/enums-overlap.catala_en:7.7-7.8:
└─┐
7 │    -- C content boolean
  │       ‾
  └─ Test
[WARNING] [A.x] At least two exceptions overlap for this variable:
┌─⯈ tests/test_proof/bad/enums-overlap.catala_en:15.11-15.12:
└──┐
15 │   context x content integer
   │           ‾
   └─ Test
Counterexample generation is disabled so none was generated.
```
